<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/txt_white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/change_pass_btn_click_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/change_password"
                android:textColor="@color/txt_white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/txt_reset_pass"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/txt_et_old_pass"
                    style="@style/otp_style"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"/>


                <EditText
                    android:id="@+id/txt_et_new"
                    style="@style/otp_style"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"/>



                <EditText
                    android:id="@+id/txt_et_confirm"
                    style="@style/otp_style"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"/>


                <Button
                    android:id="@+id/btn_change_submit"
                    style="@style/button_custom_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/save" />


            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
