<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/txt_white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/otp_btn_click_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/otp"
                android:textColor="@color/txt_white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:gravity="center"
                    android:layout_marginTop="@dimen/title_top_marg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     android:text="@string/txt_otp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_title" />

                <TextView
                    android:id="@+id/otp_txt_mobiles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="+918920828585"
                    android:textColor="@color/colorPrimary"
                    android:textScaleX="1.1"
                    android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_otp"
                    style="@style/otp_style"
                    android:hint="@string/enter_otp"
                    android:inputType="number"
                    android:maxLength="4" />


                <Button
                    android:id="@+id/btn_submit_otp"
                    style="@style/button_custom_style"
                   android:text="@string/btn_submit" />

                <TextView
                    android:id="@+id/otp_txt_resend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:gravity="center"
                    android:text="@string/resend_otp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold" />


            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
