<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:background="@drawable/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@drawable/login"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="right"
                android:textColor="@color/txt_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Skip"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                />

            <LinearLayout
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/phone"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    style="@style/textView_custom_style" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email"
                    android:hint="@string/enter_email_id"
                    android:inputType="textEmailAddress"
                    android:maxLength="10"
                    style="@style/textView_custom_style" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    style="@style/textView_custom_style"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    style="@style/textView_custom_style"
                    />


                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <TextView
                        android:textSize="11sp"
                        android:textColor="@color/txt_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_term_candition"
                        />


                </LinearLayout>

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/sign_up"
                    style="@style/button_custom_style" />


            </LinearLayout>

        </LinearLayout>



        <TextView
            android:id="@+id/signup_btn_login"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/txt_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_"
            />

    </RelativeLayout>

    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</android.support.design.widget.CoordinatorLayout>
